# polars-text

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  NOTICE  PUBLISH.md  README.md  pyproject.toml  pytest.ini  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md
docs/developer-guide/: architecture.md  index.md  python-api.md  rust-plugins.md  testing-and-release.md  tokenizers-and-plan-paths.md
experiments/topic_eval/: README.md  corpora.py  eval.py
polars_text/: __init__.py  _internal.pyi  functions.py  models.py  namespace.py  plan_paths.py  plan_scrub.py  token_cache.py  token_frequencies.py  topic_modeling.py  utils.py
polars_text/libpolars_text.dylib.dSYM/Contents/: Info.plist
resources/: quote_verb.txt
src/: cache.rs  concordance.rs  expressions.rs  lib.rs  lindera_dict.rs  offsets.rs  plan_paths.rs  plan_scrub.rs  pos_tagging.rs  quotation.rs  token_frequencies.rs  tokenizer.rs  tokens_cache_io.rs  topic_modeling.rs
src/topic_modeling/: chunking.rs  cluster.rs  coords.rs  ctfidf.rs  embedding.rs  embedding_cache.rs  mod.rs  plugin.rs  reduce.rs  rollup.rs
tests/: test_concordance.py  test_embedding_api.py  test_golden_en_baseline.py  test_jieba_chinese.py  test_lindera_integration.py  test_models_registry.py  test_optional_features.py  test_plan_paths.py  test_plan_scrub.py  test_pluggable_tokenizer.py  test_polars_text_utils.py  test_python_dependencies.py  test_quotation.py  test_token_frequencies.py  test_tokenize.py  test_tokenize_cache.py  test_tokenize_with_cache_lookup.py  test_tokenize_with_offsets.py  test_topic_modeling.py
