[package]
name = "polars_text"
version = "0.3.0"
edition = "2021"

[lib]
name = "polars_text"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
duckdb = { version = "1.10503.1", features = ["bundled"] }
fs2 = "0.4"
hf-hub = "0.5"
# Lindera dict download support: fetch official GitHub release zips on first use.
ureq = { version = "3", default-features = false, features = ["rustls"] }
zip = { version = "7", default-features = false, features = [
    "deflate-flate2-zlib-rs",
] }
# Lindera — word/morpheme-level segmentation for Chinese (Jieba), Japanese
# (IPADIC / UniDic), and Korean (ko-dic). We deliberately avoid Lindera's
# `embed-*` features so dictionaries are not packed into the extension; every
# `lindera:*` model is downloaded into the local cache only on first use.
lindera = { version = "3", default-features = false, features = ["mmap"] }
once_cell = "1"
# Keep all polars crates on the exact source tree used by Python polars 1.40.0.
# Building this crate standalone in CI must not rely on an outer workspace patch,
# otherwise Cargo mixes crates.io polars 0.53.0 with git-tagged pyo3-polars and
# the resolver breaks on transitive dependencies like chrono.
polars = { git = "https://github.com/pola-rs/polars.git", tag = "py-1.40.0", default-features = false, features = [
    "fmt",
    "dtype-struct",
] }
pyo3 = "0.28"
pyo3-polars = { git = "https://github.com/pola-rs/polars.git", tag = "py-1.40.0", features = [
    "derive",
] }
regex = "1"
serde = { version = "1", features = ["derive"] }
tokenizers = "0.23"

# --- Topic-modeling pipeline (Rust BERTopic replacement) ---
# ort: ONNX Runtime embeddings for Hugging Face ONNX sentence-transformer repos.
# src/topic_modeling/embedding.rs owns automatic hf-hub downloads and runtime
# inference. Candle was intentionally removed because acceleration needs ORT EPs.
ort = { version = "2.0.0-rc.12", default-features = false, features = [
    "std",
    "ndarray",
    "download-binaries",
    "tls-native",
    "api-24",
    "directml",
    "xnnpack",
] }
serde_json = "1"
sha2 = "0.10"
# pacmap: PaCMAP dimensionality reduction (ndarray 0.16). Used by
# src/topic_modeling/reduce.rs. No PCA-to-50 fallback — PaCMAP only.
pacmap = "0.2"
ndarray = "0.16"
# hdbscan: density-based clustering of reduced chunk embeddings into topics.
# Used by src/topic_modeling/cluster.rs.
hdbscan = "0.12"

[profile.release]
strip = "symbols"
