[package]
name = "polars_text"
version = "0.4.0"
edition = "2021"

[lib]
name = "polars_text"
crate-type = ["cdylib"]

[features]
default = ["full"]
full = ["tokenization", "embedding", "topic-modeling"]
cache = ["dep:duckdb", "dep:fs2", "dep:serde_json", "dep:sha2"]
tokenization = [
    "dep:hf-hub",
    "dep:lindera",
    "dep:tokenizers",
    "dep:ureq",
    "dep:zip",
    "cache",
]
embedding = [
    "dep:hf-hub",
    "dep:ndarray",
    "dep:ort",
    "dep:tokenizers",
    "cache",
]
topic-modeling = ["embedding", "tokenization", "dep:hdbscan", "dep:pacmap"]

[dependencies]
anyhow = "1.0"
duckdb = { version = "1.10504.0", features = ["bundled"], optional = true }
fs2 = { version = "0.4", optional = true }
hf-hub = { version = "0.5", optional = true }
# Lindera dict download support: fetch official GitHub release zips on first use.
ureq = { version = "3", default-features = false, features = [
    "rustls",
], optional = true }
zip = { version = "7", default-features = false, features = [
    "deflate-flate2-zlib-rs",
], optional = true }
# Lindera — word/morpheme-level segmentation for Chinese (Jieba), Japanese
# (IPADIC / UniDic), and Korean (ko-dic). We deliberately avoid Lindera's
# `embed-*` features so dictionaries are not packed into the extension; every
# `lindera:*` model is downloaded into the local cache only on first use.
lindera = { version = "3", default-features = false, features = [
    "mmap",
], optional = true }
once_cell = "1"
# Keep all polars crates on the exact source tree used by Python polars 1.40.0.
# Building this crate standalone in CI must not rely on an outer workspace patch,
# otherwise Cargo mixes crates.io polars 0.53.0 with git-tagged pyo3-polars and
# the resolver breaks on transitive dependencies like chrono.
polars = { git = "https://github.com/pola-rs/polars.git", tag = "py-1.40.0", default-features = false, features = [
    "fmt",
    "dtype-struct",
] }
pyo3 = "0.28"
pyo3-polars = { git = "https://github.com/pola-rs/polars.git", tag = "py-1.40.0", features = [
    "derive",
] }
regex = "1"
serde = { version = "1", features = ["derive"] }
# Keep `onig` regex support, but avoid tokenizers' default `esaxx_fast` C++
# path: esaxx-rs forces /MT on MSVC, conflicting with usearch/cxx's /MD.
tokenizers = { version = "0.23", default-features = false, features = [
    "onig",
], optional = true }

# --- Topic-modeling pipeline (Rust BERTopic replacement) ---
# ort: ONNX Runtime embeddings for Hugging Face ONNX sentence-transformer repos.
# src/topic_modeling/embedding.rs owns automatic hf-hub downloads and runtime
# inference. Candle was intentionally removed because acceleration needs ORT EPs.
ort = { version = "2.0.0-rc.12", default-features = false, features = [
    "std",
    "ndarray",
    "download-binaries",
    "tls-native",
    "api-24",
    "directml",
    "xnnpack",
], optional = true }
serde_json = { version = "1", optional = true }
sha2 = { version = "0.10", optional = true }
# pacmap: PaCMAP dimensionality reduction (ndarray 0.16). Used by
# src/topic_modeling/reduce.rs. The static MKL backend keeps Windows wheels
# self-contained; otherwise petal-decomposition links unresolved LAPACK symbols.
pacmap = { version = "0.2", features = ["intel-mkl-static"], optional = true }
ndarray = { version = "0.16", optional = true }
# hdbscan: density-based clustering of reduced chunk embeddings into topics.
# Used by src/topic_modeling/cluster.rs.
hdbscan = { version = "0.12", optional = true }

[profile.dev]
debug = 0

[profile.dev.build-override]
debug = 0

[profile.release]
strip = "symbols"
