[project]
name = "polars-text"
version = "0.3.0"
description = "Polars expression plugins for text analysis (LDaCA Wordflow)"
readme = "README.md"
requires-python = ">=3.14"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Language Data Commons of Australia (LDaCA) and Sydney Informatics Hub, The University of Sydney" }]
dependencies = ["polars==1.40.0"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "."
module-name = "polars_text._internal"

[dependency-groups]
dev = ["maturin>=1.0,<2.0", "pytest>=7.4.0"]
